# r3a-minikit

./: .bumpversion.cfg  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mise.toml  pyproject.toml  tox.ini
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  release.yml
docs/: logger_flowchart_TD.md
src/r3a_logger/: __init__.py  logger.py
tests/r3a_logger/: test_logger.py
