[tool.poetry]
name = "r3a-minikit"
version = "0.0.1"
description = "A collection of utilities and mini modules I often end up using over and over"
authors = ["Ramon Alcantara Arceo <ramalc.ms@outlook.com>"]
license = "MIT"
readme = "README.md"

packages = [{ include = "r3a_logger", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.2,<10.0.0"
pytest-cov = ">=7.0.0,<8.0.0"
ruff = ">=0.15.2,<0.16.0"
mypy = ">=1.19.1,<2.0.0"
tox = ">=4.0.0,<5.0.0"
bump2version = "^1.0.1"
